# HttpClient

./: .gitignor  CMakeLists.txt  README  README.md
include/: HttpClient.hpp
src/: HttpClient.cpp  dllmain.cpp
